fix: scrollbar position

--- a/src/layouts/general/layout.module.css
+++ b/src/layouts/general/layout.module.css
@@ -378,7 +378,7 @@
     display: none;
   }
   .nav__inner {
-    width: 25vw;
+    width: 20vw;
   }
   .header,
   .header__dark {
